Fix Hero Button Size on small screens

--- a/SmallestDotNet/css/main.css
+++ b/SmallestDotNet/css/main.css
@@ -79,4 +79,12 @@ body
         float: left;
         margin: 20px;
     }
+
+    #getdotnet, #checkdotnet
+{
+    color: #000;
+    text-decoration: none;
+    font-size: 24px;
+}
+
 }
